# saas-metrics-v3-07vato

./: .gitignore  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: backend-ci.yml  deploy-prod.yml  deploy-staging.yml  frontend-ci.yml  security-scan.yml
blitzy/documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/docker/prometheus/: prometheus.yml
infrastructure/kubernetes/base/: api-gateway.yaml  auth-service.yaml  benchmark-service.yaml  metrics-service.yaml  namespace.yaml  postgres.yaml  redis.yaml
infrastructure/scripts/: backup-db.sh  init-db.sh  restore-db.sh  setup-monitoring.sh
src/backend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  README.md  docker-compose.yml  jest.config.ts  lerna.json  nodemon.json  package.json  tsconfig.json
src/backend/proto/: auth.proto  benchmark.proto  metrics.proto
src/backend/scripts/: build.sh  deploy.sh  generate-proto.sh  test.sh
src/backend/services/benchmark/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
src/backend/services/benchmark/src/: __init__.py  app.py  config.py
src/backend/services/benchmark/src/controllers/: benchmark_controller.py
src/backend/services/benchmark/src/models/: benchmark_model.py
src/backend/services/benchmark/src/services/: aggregation_service.py  data_processing_service.py
src/backend/services/benchmark/src/utils/: calculations.py
src/backend/services/benchmark/tests/: __init__.py
src/backend/services/benchmark/tests/integration/: test_benchmark_api.py
src/backend/services/benchmark/tests/unit/: test_calculations.py
src/web/: .dockerignore  .env.example  .eslintrc.json  .prettierrc  Dockerfile  README.md  index.html  jest.config.ts  package.json  tsconfig.json  vite.config.ts
src/web/src/: App.tsx  index.tsx  vite-env.d.ts
src/web/src/config/: api.config.ts  (+3 more)
(+177 files in other folders)
