[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "benchmark-service"
version = "1.0.0"
description = "Benchmark data aggregation and processing service for startup metrics platform"
authors = ["Startup Metrics Platform Team"]
readme = "README.md"

packages = [
    { include = "benchmark_service", from = "src" }
]

dependencies = [
    # Web Framework - v0.100.0 for latest stable features and security updates
    "fastapi==0.100.0",
    "uvicorn==0.23.0",
    
    # Data Validation and Models
    "pydantic==2.0.0",
    
    # Database and Migrations
    "sqlalchemy==2.0.0",
    "alembic==1.11.0",
    
    # Data Processing
    "numpy==1.24.0",
    "pandas==2.0.0",
    
    # gRPC Communication
    "grpcio==1.56.0",
    "grpcio-tools==1.56.0",
    
    # Monitoring and Metrics
    "prometheus-client==0.17.0",
    "prometheus-fastapi-instrumentator==6.1.0",
    
    # Security
    "python-jose==3.3.0",
    
    # Configuration
    "python-dotenv==1.0.0",
    
    # Logging
    "structlog==23.1.0"
]

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "7.4.0"
pytest-cov = "4.1.0"
pytest-asyncio = "0.21.0"

# Code Quality
black = "23.7.0"
isort = "5.12.0"
mypy = "1.4.0"
flake8 = "6.0.0"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.4.0"
addopts = "-ra -q --cov=benchmark_service"
testpaths = ["tests"]
asyncio_mode = "auto"